// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer Comments code with # 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    5,
    "<%=",
    13,
    16,
  ],
  Array [
    10,
    " ",
    16,
    17,
  ],
  Array [
    9,
    "#",
    17,
    18,
  ],
  Array [
    10,
    " ",
    18,
    19,
  ],
  Array [
    13,
    "no",
    19,
    21,
  ],
  Array [
    10,
    " ",
    21,
    22,
  ],
  Array [
    13,
    "data",
    22,
    26,
  ],
  Array [
    10,
    " ",
    26,
    27,
  ],
  Array [
    3,
    "%>",
    27,
    29,
  ],
  Array [
    1,
    "after
      ",
    29,
    42,
  ],
  Array [
    0,
    null,
    42,
    43,
  ],
]
`;

exports[`Lexer Comments code with /* 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    5,
    "<%=",
    13,
    16,
  ],
  Array [
    10,
    " ",
    16,
    17,
  ],
  Array [
    12,
    "/* ok */",
    17,
    25,
  ],
  Array [
    10,
    " ",
    25,
    26,
  ],
  Array [
    13,
    "data",
    26,
    30,
  ],
  Array [
    10,
    " ",
    30,
    31,
  ],
  Array [
    3,
    "%>",
    31,
    33,
  ],
  Array [
    1,
    "after
      ",
    33,
    46,
  ],
  Array [
    0,
    null,
    46,
    47,
  ],
]
`;

exports[`Lexer Comments code with // 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    5,
    "<%=",
    13,
    16,
  ],
  Array [
    10,
    " ",
    16,
    17,
  ],
  Array [
    9,
    "//",
    17,
    19,
  ],
  Array [
    10,
    " ",
    19,
    20,
  ],
  Array [
    13,
    "no",
    20,
    22,
  ],
  Array [
    10,
    " ",
    22,
    23,
  ],
  Array [
    13,
    "data",
    23,
    27,
  ],
  Array [
    10,
    " ",
    27,
    28,
  ],
  Array [
    3,
    "%>",
    28,
    30,
  ],
  Array [
    1,
    "after
      ",
    30,
    43,
  ],
  Array [
    0,
    null,
    43,
    44,
  ],
]
`;

exports[`Lexer Comments injection 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    4,
    "<%# comment /* should break */ data %>",
    13,
    51,
  ],
  Array [
    1,
    "after
      ",
    51,
    64,
  ],
  Array [
    0,
    null,
    64,
    65,
  ],
]
`;

exports[`Lexer Comments simple 1`] = `
Array [
  Array [
    1,
    "
      before",
    0,
    13,
  ],
  Array [
    4,
    "<%# comment %>",
    13,
    27,
  ],
  Array [
    1,
    "after
      ",
    27,
    40,
  ],
  Array [
    0,
    null,
    40,
    41,
  ],
]
`;

exports[`Lexer Simple case 1`] = `
Array [
  Array [
    1,
    "
    <foo><%% 
    ",
    0,
    19,
  ],
  Array [
    4,
    "<%# comment %>",
    19,
    33,
  ],
  Array [
    1,
    "
    ",
    33,
    38,
  ],
  Array [
    7,
    "<%_",
    38,
    41,
  ],
  Array [
    10,
    " ",
    41,
    42,
  ],
  Array [
    13,
    "if",
    42,
    44,
  ],
  Array [
    10,
    " ",
    44,
    45,
  ],
  Array [
    16,
    "(",
    45,
    46,
  ],
  Array [
    13,
    "foo",
    46,
    49,
  ],
  Array [
    10,
    " ",
    49,
    50,
  ],
  Array [
    9,
    "=",
    50,
    51,
  ],
  Array [
    9,
    "=",
    51,
    52,
  ],
  Array [
    10,
    " ",
    52,
    53,
  ],
  Array [
    11,
    "\\"%>\\\\\\"%>\\"",
    53,
    61,
  ],
  Array [
    17,
    ")",
    61,
    62,
  ],
  Array [
    10,
    " ",
    62,
    63,
  ],
  Array [
    14,
    "{",
    63,
    64,
  ],
  Array [
    10,
    " ",
    64,
    65,
  ],
  Array [
    7,
    "_%>",
    65,
    68,
  ],
  Array [
    1,
    "
      ",
    68,
    75,
  ],
  Array [
    5,
    "<%=",
    75,
    78,
  ],
  Array [
    10,
    " ",
    78,
    79,
  ],
  Array [
    13,
    "bar",
    79,
    82,
  ],
  Array [
    10,
    " ",
    82,
    83,
  ],
  Array [
    3,
    "%>",
    83,
    85,
  ],
  Array [
    1,
    "
    ",
    85,
    90,
  ],
  Array [
    2,
    "<%",
    90,
    92,
  ],
  Array [
    10,
    " ",
    92,
    93,
  ],
  Array [
    15,
    "}",
    93,
    94,
  ],
  Array [
    10,
    " ",
    94,
    95,
  ],
  Array [
    3,
    "%>",
    95,
    97,
  ],
  Array [
    1,
    "
    </foo>
    ",
    97,
    114,
  ],
  Array [
    0,
    null,
    114,
    115,
  ],
]
`;
